# lvgl_explorer

./: Makefile  lv_conf.h  main.c  main.h  s
lvgl/: lvgl.h  my_header.h
lvgl/examples/layouts/flex/: lv_example_flex_1.c
lvgl/examples/libs/freetype/: lv_example_freetype_1.c
lvgl/examples/libs/png/: lv_example_png_1.c
serverCode/: server.c
usrCode/: CMakeLists.txt  events.c  filelist.txt  tcpComm.c  ui.c  ui.h
usrCode/images/: ui_img_add_file_png.c  ui_img_check_png.c  ui_img_cloud_download_png.c  ui_img_cloud_upload_png.c  ui_img_default_file_png.c  ui_img_delete_16dp_434343_fill0_wght400_grad0_opsz20_png.c  ui_img_delete_png.c  ui_img_folder_png.c  ui_img_new_folder_png.c  ui_img_terminal_png.c  ui_img_undo_png.c
usrCode/screens/: ui_cloud_screen.c  ui_main_screen.c
